# ssbt

./: .drone-ci.yaml  .drone.yml  .gitignore  Cargo.toml  README.md
ssbt-lib/: Cargo.toml
ssbt-lib/src/: lib.rs
ssbt-server/: Cargo.toml
ssbt-tool/: Cargo.toml  Makefile  install_linux.sh  install_macos.sh  sample.yaml
ssbt-tool/src/: fs_utils.rs  main.rs  naming.rs  process.rs  shell_exec.rs
ssbt-tool/src/packaging/: mod.rs  zip.rs
ssbt-tool/src/sink/: mod.rs  save_file.rs  send_net.rs
