[package]
name = "ssbt-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ssbt-lib = { path = "../ssbt-lib" } # Dependency on the shared library
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0.100"
glob = "0.3.3"
