[package]
name = "ssbt-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ssbt-lib = { path = "../ssbt-lib" } # Dependency on the shared library
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0.100"
glob = "0.3.3"
futures = "0.3.31"
bytes = "1.10.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-util"] }
async_zip = { version = "0.0.18", features = ["full", "tokio", "deflate"] }
async-stream = "0.3.6"
reqwest = { version = "0.12.24", features = ["blocking", "stream"] }
tokio-util = { version = "0.7.16", features = ["full"] }
zip = "6.0.0"
streaming-zip = "0.5.0"
chrono = "0.4.42"
