[package]
name = "ssbt-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ssbt-lib = { path = "../ssbt-lib" } # Dependency on the shared library
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0.100"
glob = "0.3.3"
futures = { version = "0.3.31", features = ["io-compat"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-util", "net", "fs"] }
async_zip = { version = "0.0.18", features = ["full", "tokio", "deflate"] }
reqwest = { version = "0.12.24", features = ["blocking", "stream", "rustls-tls"] }
tokio-util = { version = "0.7.16", features = ["full"] }
chrono = "0.4.42"
